finished cookie clicker

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="javascriptsheet" href="index.js">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+    <h1>Cookie Clicker!</h1>
+    <button class="cookie"><img src="/images/cookie.jpg" alt="cookie"></button>
+    <p>oooh do you really like this cookie?.. you clicked it <span id="counter"> </span> times</p>
+    </div>
+    <div>
+        <h1>Magnifying Glass</h1>
+        <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam modi quam numquam illo delectus neque? Harum perferendis reprehenderit, cumque laboriosam aperiam, optio odio suscipit quaerat, deserunt commodi officiis accusamus mollitia!</p>
+        <button onclick="largerText()">Larger</button>
+        <button onclick="smallerText()">Smaller</button>
+    </div>
+    <script src="index.js"></script>
+</body>
+</html>
