--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div>
         <h1>Magnifying Glass</h1>
-        <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam modi quam numquam illo delectus neque? Harum perferendis reprehenderit, cumque laboriosam aperiam, optio odio suscipit quaerat, deserunt commodi officiis accusamus mollitia!</p>
-        <button onclick="largerText()">Larger</button>
-        <button onclick="smallerText()">Smaller</button>
+        <p id="random1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam modi quam numquam illo delectus neque? Harum perferendis reprehenderit, cumque laboriosam aperiam, optio odio suscipit quaerat, deserunt commodi officiis accusamus mollitia!</p>
+        <button class="button1">Larger</button>
+        <button class="button2">Smaller</button>
     </div>
     <script src="index.js"></script>
 </body>
