--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <button class="button1">Larger</button>
         <button class="button2">Smaller</button>
     </div>
+    <div id="screen">
+        <h1>Green Screen</h1>
+        <input type="text" id="randomColor">
+        <button class="button3">Press Me!</button>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
